create colored blocks

--- a/UIKit/colorsAndType.html
+++ b/UIKit/colorsAndType.html
@@ -11,10 +11,58 @@
 <body>
     <div class="container-fluid">
         <div class="row">
-            <div class="col t1">
-                dsgsdgds
+            <div class="col">
+                <div class="b-colorItem">
+                    <div class="b-colorItem__block"></div>
+                    <div class="b-colorItem__description">
+                        <div class="b-colorItem__title"></div>
+                        <div class="b-colorItem__hex"></div>
+                    </div>
+                </div>
+                <div class="b-colorItem">
+                    <div class="b-colorItem__block"></div>
+                    <div class="b-colorItem__description">
+                        <div class="b-colorItem__title"></div>
+                        <div class="b-colorItem__hex"></div>
+                    </div>
+                </div>
+                <div class="b-colorItem">
+                    <div class="b-colorItem__block"></div>
+                    <div class="b-colorItem__description">
+                        <div class="b-colorItem__title"></div>
+                        <div class="b-colorItem__hex"></div>
+                    </div>
+                </div>
+                <div class="b-colorItem">
+                    <div class="b-colorItem__block"></div>
+                    <div class="b-colorItem__description">
+                        <div class="b-colorItem__title"></div>
+                        <div class="b-colorItem__hex"></div>
+                    </div>
+                </div>
+                <div class="b-colorItem">
+                    <div class="b-colorItem__block"></div>
+                    <div class="b-colorItem__description">
+                        <div class="b-colorItem__title"></div>
+                        <div class="b-colorItem__hex"></div>
+                    </div>
+                </div>
+                <div class="b-colorItem">
+                    <div class="b-colorItem__block"></div>
+                    <div class="b-colorItem__description">
+                        <div class="b-colorItem__title"></div>
+                        <div class="b-colorItem__hex"></div>
+                    </div>
+                </div>
+                <div class="b-colorItem">
+                    <div class="b-colorItem__block"></div>
+                    <div class="b-colorItem__description">
+                        <div class="b-colorItem__title"></div>
+                        <div class="b-colorItem__hex"></div>
+                    </div>
+                </div>
             </div>
-            <div class="col t2">
+            <div class="col">
 sgsdgsdgs
             </div>
         </div>
