--- a/UIKit/colorsAndType.html
+++ b/UIKit/colorsAndType.html
@@ -10,60 +10,79 @@
 </head>
 <body>
     <div class="container-fluid">
-        <div class="row">
+        <div class="b-logo"></div>
+        <div class="row b-colorsAndTypeWrap">
             <div class="col">
                 <div class="b-colorItem">
                     <div class="b-colorItem__block"></div>
                     <div class="b-colorItem__description">
-                        <div class="b-colorItem__title"></div>
-                        <div class="b-colorItem__hex"></div>
+                        <div class="b-colorItem__title">Dark Shade 100%</div>
+                        <div class="b-colorItem__hex">#1F2041</div>
                     </div>
                 </div>
                 <div class="b-colorItem">
                     <div class="b-colorItem__block"></div>
                     <div class="b-colorItem__description">
-                        <div class="b-colorItem__title"></div>
-                        <div class="b-colorItem__hex"></div>
+                        <div class="b-colorItem__title">Dark Shade 75%</div>
+                        <div class="b-colorItem__hex">#1F2041</div>
                     </div>
                 </div>
                 <div class="b-colorItem">
                     <div class="b-colorItem__block"></div>
                     <div class="b-colorItem__description">
-                        <div class="b-colorItem__title"></div>
-                        <div class="b-colorItem__hex"></div>
+                        <div class="b-colorItem__title">Dark Shade 50%</div>
+                        <div class="b-colorItem__hex">#1F2041</div>
                     </div>
                 </div>
                 <div class="b-colorItem">
                     <div class="b-colorItem__block"></div>
                     <div class="b-colorItem__description">
-                        <div class="b-colorItem__title"></div>
-                        <div class="b-colorItem__hex"></div>
+                        <div class="b-colorItem__title">Dark Shade 25%</div>
+                        <div class="b-colorItem__hex">#1F2041</div>
                     </div>
                 </div>
                 <div class="b-colorItem">
                     <div class="b-colorItem__block"></div>
                     <div class="b-colorItem__description">
-                        <div class="b-colorItem__title"></div>
-                        <div class="b-colorItem__hex"></div>
+                        <div class="b-colorItem__title">Dark Shade 5%</div>
+                        <div class="b-colorItem__hex">#1F2041</div>
                     </div>
                 </div>
                 <div class="b-colorItem">
                     <div class="b-colorItem__block"></div>
                     <div class="b-colorItem__description">
-                        <div class="b-colorItem__title"></div>
-                        <div class="b-colorItem__hex"></div>
+                        <div class="b-colorItem__title">Purple</div>
+                        <div class="b-colorItem__hex">#BC9CFF</div>
                     </div>
                 </div>
                 <div class="b-colorItem">
                     <div class="b-colorItem__block"></div>
                     <div class="b-colorItem__description">
-                        <div class="b-colorItem__title"></div>
-                        <div class="b-colorItem__hex"></div>
+                        <div class="b-colorItem__title">Green</div>
+                        <div class="b-colorItem__hex">#6FCF97</div>
                     </div>
                 </div>
             </div>
             <div class="col">
-sgsdgsdgs
+                <div class="b-typeItem">
+                    <div class="b-typeItem__name">H1</div>
+                    <div class="b-typeItem__description">This one is the sub-section or
+                        widget title</div>
+                </div>
+                <div class="b-typeItem">
+                    <div class="b-typeItem__name">H2</div>
+                    <div class="b-typeItem__description">Next one is the item title inside
+                        widgets</div>
+                </div>
+                <div class="b-typeItem">
+                    <div class="b-typeItem__name">H3</div>
+                    <div class="b-typeItem__description">This is a label or CTA text</div>
+                </div>
+                <div class="b-typeItem">
+                    <div class="b-typeItem__name">Body</div>
+                    <div class="b-typeItem__description">This is the body text which is used for most
+                        of the design, like paragraphs, lists, etc.</div>
+                </div>
             </div>
         </div>
 
