--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,9 @@
 </head>
 <body>
     <div class="container-fluid">
-        <div class="b-logo"></div>
+        <div class="b-logo">
+            <img src="/assets/img/group.svg" alt="logo">
+        </div>
         <div class="row b-colorsAndTypeWrap">
             <div class="col">
                 <div class="b-colorItem">
